force-app/main/default/objects/Disbursement__c/fields/CBS_Verification__c.field-meta.xml
<CustomField>
    <fullName>CBS_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CBS Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Disbursements (CBS Verification)</relationshipLabel>
    <relationshipName>Disbursements4</relationshipName>
    <type>Lookup</type>
</CustomField>