force-app/main/default/objects/Disbursement__c/fields/CM__c.field-meta.xml
<CustomField>
    <fullName>CM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>