force-app/main/default/objects/Disbursement__c/fields/Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner__c</fullName>
    <formula>IF( 
  ISBLANK(Owner:Queue.Id),
  Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName,
  Owner:Queue.QueueName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Owner</label>
    <type>Text</type>
</CustomField>