force-app/main/default/objects/Disbursement__c/fields/Disbursment_Date__c.field-meta.xml
<CustomField>
    <fullName>Disbursment_Date__c</fullName>
    <label>Disbursment Date</label>
    <type>Date</type>
</CustomField>