force-app/main/default/objects/Disbursement__c/fields/E_Nach_Verification__c.field-meta.xml
<CustomField>
    <fullName>E_Nach_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E-Nach Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Disbursements</relationshipLabel>
    <relationshipName>Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>