force-app/main/default/objects/Disbursement__c/fields/Insurance_Amount_Approval__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Amount_Approval__c</fullName>
    <label>Insurance Amount Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>