force-app/main/default/objects/Disbursement__c/fields/Is_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Is_Read_Only__c</fullName>
    <formula>IF((ISPICKVAL( Status__c , &apos;Inactive&apos;) || ISPICKVAL( Status__c , &apos;Disbursed&apos;) || 
ISPICKVAL(  Stage__c , &apos;Closed&apos;) || $User.Id != OwnerId ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Read Only</label>
    <type>Checkbox</type>
</CustomField>