force-app/main/default/objects/Disbursement__c/fields/Is_Sanction_Letter_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_Sanction_Letter_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sanction Letter Generated</label>
    <type>Checkbox</type>
</CustomField>