force-app/main/default/objects/Disbursement__c/fields/IsMemoCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsMemoCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check completion of Disbursement Memo Process</description>
    <label>IsMemoCompleted</label>
    <type>Checkbox</type>
</CustomField>