force-app/main/default/objects/Disbursement__c/fields/isRepaymentSchedule__c.field-meta.xml
<CustomField>
    <fullName>isRepaymentSchedule__c</fullName>
    <formula>IF(ISBLANK( First_EMI_Date__c ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isRepaymentSchedule</label>
    <type>Checkbox</type>
</CustomField>