force-app/main/default/objects/Disbursement__c/fields/Last_Emi_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Emi_Date__c</fullName>
    <label>Last Emi Date</label>
    <type>Date</type>
</CustomField>