force-app/main/default/objects/Disbursement__c/fields/Loan_Offer_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Offer_Review_Status__c</fullName>
    <label>Loan Offer Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent for Apporval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>No Approval Required</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>