force-app/main/default/objects/Disbursement__c/fields/Partner_Verification__c.field-meta.xml
<CustomField>
    <fullName>Partner_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Disbursements (Partner Verification)</relationshipLabel>
    <relationshipName>Disbursements2</relationshipName>
    <type>Lookup</type>
</CustomField>