force-app/main/default/objects/Disbursement__c/fields/Processing_Fee_Approval__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fee_Approval__c</fullName>
    <label>Processing Fee Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>