force-app/main/default/objects/Disbursement__c/fields/Quote_Verification__c.field-meta.xml
<CustomField>
    <fullName>Quote_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Disbursements (Quote Verification)</relationshipLabel>
    <relationshipName>Disbursements1</relationshipName>
    <type>Lookup</type>
</CustomField>