force-app/main/default/objects/Disbursement__c/fields/Repayment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Mode__c</fullName>
    <label>Repayment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standing Instructions</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>PDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>