force-app/main/default/objects/Disbursement__c/fields/RM_RO__c.field-meta.xml
<CustomField>
    <fullName>RM_RO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM/RO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Disbursements3</relationshipName>
    <type>Lookup</type>
</CustomField>