force-app/main/default/objects/Disbursement__c/fields/ROI_Approval__c.field-meta.xml
<CustomField>
    <fullName>ROI_Approval__c</fullName>
    <label>ROI % Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>