force-app/main/default/objects/Disbursement__c/fields/Sanction_Letter_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Letter_Assigned_Date__c</fullName>
    <label>Sanction Letter Assigned Date</label>
    <type>Date</type>
</CustomField>