force-app/main/default/objects/Disbursement__c/fields/Sanction_Letter_TAT__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Letter_TAT__c</fullName>
    <formula>TODAY() -  Sanction_Letter_Assigned_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sanction Letter TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>