force-app/main/default/objects/Disbursement__c/fields/Send_Back_Reason__c.field-meta.xml
<CustomField>
    <fullName>Send_Back_Reason__c</fullName>
    <label>Send Back Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>