force-app/main/default/objects/Disbursement__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <defaultValue>&apos;Pre-Disbursal Document Collection&apos;</defaultValue>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negotiation</fullName>
                <default>true</default>
                <label>Negotiation</label>
            </value>
            <value>
                <fullName>Pre-Disbursal Document Collection</fullName>
            </value>
            <value>
                <fullName>Documents Review</fullName>
            </value>
            <value>
                <fullName>E-Nach Pending</fullName>
            </value>
            <value>
                <fullName>Disbursement Maker</fullName>
            </value>
            <value>
                <fullName>Disbursement Checker</fullName>
            </value>
            <value>
                <fullName>PDD</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Disbursement Process Initiated</fullName>
                <isActive>false</isActive>
                <label>Disbursement Process Initiated</label>
            </value>
            <value>
                <fullName>Documents sent to CPC</fullName>
                <isActive>false</isActive>
                <label>Documents sent to CPC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>