force-app/main/default/objects/Disbursement__c/fields/Temp_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Temp_Loan_Amount__c</fullName>
    <label>Temp Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>