force-app/main/default/objects/Disbursement__c/fields/Tenure_Approval__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Approval__c</fullName>
    <label>Tenure Approval</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>