force-app/main/default/objects/Disbursement__c/recordTypes/BL.recordType-meta.xml
<RecordType>
    <fullName>BL</fullName>
    <active>true</active>
    <label>BL</label>
</RecordType>