force-app/main/default/objects/Disbursement__c/recordTypes/CV_CE.recordType-meta.xml
<RecordType>
    <fullName>CV_CE</fullName>
    <active>true</active>
    <label>CV/CE</label>
</RecordType>