force-app/main/default/objects/Disbursement__c/validationRules/Disbused_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Disbused_Status</fullName>
    <active>false</active>
    <errorConditionFormula>IF( AND(NOT(ISNEW()) , ISPICKVAL(Status__c, &apos;Disbursed&apos;))    , 
					true, 
					false)</errorConditionFormula>
    <errorMessage>You cannot change once disbursed.</errorMessage>
</ValidationRule>