force-app/main/default/objects/Disbursement__c/listViews/CPC_Agents_Checker_Queue_Disbursement.listView-meta.xml
<ListView>
    <fullName>CPC_Agents_Checker_Queue_Disbursement</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>CPC Agents (Checker) Queue</label>
    <queue>CPC_Agents_Checker_Queue</queue>
</ListView>