force-app/main/default/objects/Disbursement__c/listViews/CPC_Agents_Queue_Disbursement1.listView-meta.xml
<ListView>
    <fullName>CPC_Agents_Queue_Disbursement1</fullName>
    <filterScope>Queue</filterScope>
    <label>CPC Agents (maker) Queue</label>
    <queue>CPC_Agents_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>