force-app/main/default/objects/Disbursement__c/listViews/CPC_Queue_Disbursement.listView-meta.xml
<ListView>
    <fullName>CPC_Queue_Disbursement</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>CPC agents (Maker)</label>
    <queue>CPC_Agents_Queue</queue>
</ListView>