force-app/main/default/objects/Disbursement__c/listViews/My_Disbursement_Requests.listView-meta.xml
<ListView>
    <fullName>My_Disbursement_Requests</fullName>
    <columns>NAME</columns>
    <columns>Loan_Application__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Disbursement Requests</label>
</ListView>